Support custom bean name for redis cluster clients